2003-01-28  Pavel Roskin  <proski@gnu.org>

	* info.c (info_show_info): Cast nlink_t to int to avoid a
	warning if nlink_t is short.
	* screen.c (string_file_nlinks): Likewise.

2003-01-27  Arpi  <arpi@mplayerhq.hu>

	* key.c (is_idle): Correct maximal file descriptor and return
	value.

2003-01-27  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* util.h (app_text): Remove declaration - it became static.
	* util.c (get_compression_type): Cast magic to char * to
	fix compilation on AIX.
	* mountlist.c (read_filesystem_list) [MOUNTED_GETMNTENT1]:
	Check for MOUNTED is defined to fix compilation on AIX.
	Reported by Alexander Varakin <avarakin00@hotmail.com>.

2003-01-27  Pavel Roskin  <proski@gnu.org>

	* main.c (update_xterm_title_path): Use is_printable().

2003-01-24  Pavel Roskin  <proski@gnu.org>

	* slint.c (slang_reset_softkeys): Cast arguments from size_t to
	int to avoid a warning on 64-bit systems.

	* subshell.c (resize_tty) [!TIOCSWINSZ]: Warning fix.

2003-01-23  Pavel Roskin  <proski@gnu.org>

	* slint.c (slang_init): Limit screen size to 255x255 because of
	S-Lang limitations.
	Reported by Tero Peippola <top@ees2.oulu.fi>

2003-01-22  Adam Byrtek  <alpha@debian.org>

	* cmd.c (view_other_cmd): Update path in the xterm title after
	command execution.
	* main.c (do_execute): Likewise.

2003-01-22  Pavel Roskin  <proski@gnu.org>

	* util.c (size_trunc): Remove "b" from the output - it's
	redundant and wrong - the abbreviation for byte is "B".
	Reported by Werner Lemberg <wl@gnu.org>

2003-01-20  Pavel Roskin  <proski@gnu.org>

	* screen.c (string_file_type): Check for "regularity" before
	checking for executable bit.
	(file_compute_color): Likewise.

	* dir.c (handle_dirent): Fix cleaning the stat buffer if
	mc_lstat() fails.  Leave buf1->st_mode to be 0, so that the
	entry is marked as a "non-regular file of unknown kind".
	* screen.c (do_enter_on_file_entry): Try to change directory
	when pressing Enter on a non-stat()able file.
